--- a/style/styleAP.css
+++ b/style/styleAP.css
@@ -123,6 +123,14 @@ textarea.form-control:hover, textarea.form-control:focus
 .bodyDiscussion::-webkit-scrollbar-thumb:hover {
   background-color: #454d54;
 }
+/* Mozilla Firefox */
+html {
+  scrollbar-color: rgba(34, 37, 38, 1) rgba(72, 78, 81, 1);
+}
+.bodyDiscussion {
+  scrollbar-width: thin;
+  scrollbar-color: #343a40 transparent;
+}
 /* --------------------------------------------- CONTAINER CUSTOM --------------------------------------------- */
 .containerPerso {
   width: 100%;
@@ -405,8 +413,9 @@ input#identifiant:hover, input#mdp:hover, input#verifMdp:hover
 }
 
 .button.bouton_custom {
-	background: #343a40;
+	background: #007bff;
 	color: #fff;
+  border-radius: 25px;
 	-webkit-transition: background-color 0.3s, color 0.3s;
 	transition: background-color 0.3s, color 0.3s;
 }
