--- a/style/styleAP.css
+++ b/style/styleAP.css
@@ -89,7 +89,7 @@ textarea.form-control:hover, textarea.form-control:focus
 {
   border: 1px solid white !important;
 }
-/* ---------------- AUTOFILL INPUT COLOR ---------------- */
+/* ---------------- INPUT AUTOFILL CHROME ---------------- */
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
@@ -354,7 +354,7 @@ input#identifiant:hover, input#mdp:hover, input#verifMdp:hover
   left: 32%;
   height: 20px;
   width: 20px;
-  margin-top: 3px;
+  margin-top: 2px;
 
   border: none;
   background: rgba(255,255,255,0.4);
@@ -467,6 +467,21 @@ input#identifiant:hover, input#mdp:hover, input#verifMdp:hover
 	-webkit-transform: scale3d(1, 1, 1);
 	transform: scale3d(1, 1, 1);
 	opacity: 1;
+}
+.disabled
+{
+  opacity: 0.5;
+}
+.disabled:hover
+{
+  background: #007bff;
+	color: #fff;
+  opacity: 0.5;
+  border: none;
+}
+.disabled::before
+{
+  border: none;
 }
 /* --------------------------------------------- VALIDATION --------------------------------------------- */
 .card_text
@@ -1390,32 +1405,32 @@ textarea
 /*-----------------Cookies----------------------*/
 .cookie{
 	width: 420px;
-    height: 95px;
-    background-color: #fff;
-    position: fixed;
-    bottom: 88px;
-    border-radius: 10px;
+  height: 95px;
+  background-color: #fff;
+  position: fixed;
+  bottom: 88px;
+  border-radius: 10px;
 	left: 5%;
 	padding: 10px 20px;
 }
 
 .cookie .txt{
 	float: left;
-    width: 65%;
+  width: 65%;
 }
 .txt p{
 	color:#1D2D35;
 }
 
 .cookie .accept {
-    background-color: #40CC79;
-    color: #fff !important;
-    border-radius: 32px;
-    padding: 3px 23px;
-    /* align-self: center; */
-    font-size: 19px;
-    margin-top: 2.5%;
-    margin-left: 3%;
+  background-color: #40CC79;
+  color: #fff !important;
+  border-radius: 32px;
+  padding: 3px 23px;
+  /* align-self: center; */
+  font-size: 19px;
+  margin-top: 2.5%;
+  margin-left: 3%;
 
 }
 .cookie .accept:hover {
